@@ -1,42 +1,36 @@
+===============================================================
+  _____       _                 _            _   _
+  \_   \_ __ | |_ _ __ ___   __| |_   _  ___| |_(_) ___  _ __
+   / /\/ '_ \| __| '__/ _ \ / _` | | | |/ __| __| |/ _ \| '_ \
+/\/ /_ | | | | |_| | | (_) | (_| | |_| | (__| |_| | (_) | | | |
+\____/ |_| |_|\__|_|  \___/ \__,_|\__,_|\___|\__|_|\___/|_| |_|
 
-          _____       _                 _            _   _
-          \_   \_ __ | |_ _ __ ___   __| |_   _  ___| |_(_) ___  _ __
-           / /\/ '_ \| __| '__/ _ \ / _` | | | |/ __| __| |/ _ \| '_ \
-        /\/ /_ | | | | |_| | | (_) | (_| | |_| | (__| |_| | (_) | | | |
-        \____/ |_| |_|\__|_|  \___/ \__,_|\__,_|\___|\__|_|\___/|_| |_|
-
-
-================================================================================
+===============================================================
 
 This game was created as a continuation of the (revised) Roguebasin Roguelike Tutorial.
-By now it has grown into a beast of its own, sporting various gameplay elements that the original
-tutorial never added.
+By now it has grown into a beast of its own, sporting various gameplay elements that weren't part of the original tutorial.
 
-As it is still in very early development - in fact, it might never see a proper release, being primarily a private project 
-there is little in terms of story, balance is nonexistent and kinks are expected. Nevertheless, the master branch should always
+As it is still in very early development - in fact, it might never see a proper release - being primarily a pet project of mine,
+there is little in terms of story, balance is probably nonexistent and kinks are expected. Nevertheless, the master branch should always
 be playable.
 
-I am envisioning a Roguelike that in many ways feels and plays very familiar to traditional members of the genre, while
-making combat less indirect, slightly more dynamic and maybe even a bit arcade-like. Examples of this would be dodging and blocking
+The Roguelike I have in mind would fell and play very familiar to traditional members of the genre (shocker!), while
+making combat somewhat faster, slightly more dynamic and maybe even a bit arcade-like. Examples of this would be dodging and blocking
 being active actions, rather than passive stats.
 
-- CONTENTS -
+<page 1>
+======================================
+   ___            _             _
+  / __\___  _ __ | |_ _ __ ___ | |___
+ / /  / _ \| '_ \| __| '__/ _ \| / __|
+/ /__| (_) | | | | |_| | | (_) | \__ \
+\____/\___/|_| |_|\__|_|  \___/|_|___/
 
-Introduction    | page 1
-Controls        | page 2
-Combat          | page 3
-
-<p>
-                   ___            _             _
-                  / __\___  _ __ | |_ _ __ ___ | |___
-                 / /  / _ \| '_ \| __| '__/ _ \| / __|
-                / /__| (_) | | | | |_| | | (_) | \__ \
-                \____/\___/|_| |_|\__|_|  \___/|_|___/
+======================================
 
 
-================================================================================
+# MOVEMENT #
 
-- MOVEMENT -
 Numpad:
    7    8    9
     \   |   /
@@ -59,42 +53,48 @@ Left    Right
 Num 5 or . - Wait a turn. Rests outside combat.
 < - descend a flight of stairs
 
-- ACTIONS -
-r   - (r)eady yourself for blocking attacks
+
+# ACTIONS #
+
+r   - (r)aise your shield to block attacks
+d   - prepare yourself to (d)ash/dodge
+        - you move two tiles per step but exhaust yourself doing so
+f   - (f)ire an equipped ranged weapon
+        - use movement keys to control the cursor
+        - enter will confirm the target, ESC will cancel
 s   - (s)earch your surroundings
         - use movement keys to control the cursor
         - a description will be displayed if applicable
-        - press (s) again to stop (s)searching
+        - press (s) again or ESC to stop (s)searching
 g   - (g)et an item from the ground
 i   - open the (i)nventory
     - select an item to read it's description
-    and interact with it
-E   - shows your (e)quipment
-    - select an item to read it's description
-    and interact with it
-1..9 - Use a prepared item
+        and interact with it
+e   - shows your (e)quipment
+        - select an item to read it's description
+        and interact with it
+p   - (p)repare an item from your inventory, putting it in your quick access belt
+1-9 - Use a prepared item
 
-- MOVEMENT MODIFIERS -
-- CTRL + Movement - Interact with an object in the given direction
-- ALT + Movement - Attempt a dash in the given direction, moving 2 tiles
 
-- OTHER ACTIONS -
-? - Display this manual
+# OTHER #
+
+?   - Display this manual
 ESC - Cancel Menu or open Quit Menu
-Enter - Confirm
+Enter  - Confirm
 Alt+Enter - toggle Fullscreen
 
-<p>
-                   ___                       _
-                  /___\__   _____ _ ____   _(_) _____      __
-                 //  //\ \ / / _ \ '__\ \ / / |/ _ \ \ /\ / /
-                / \_//  \ V /  __/ |   \ V /| |  __/\ V  V /
-                \___/    \_/ \___|_|    \_/ |_|\___| \_/\_/
+<page 2>
+==============================================
+   ___                       _
+  /___\__   _____ _ ____   _(_) _____      __
+ //  //\ \ / / _ \ '__\ \ / / |/ _ \ \ /\ / /
+/ \_//  \ V /  __/ |   \ V /| |  __/\ V  V /
+\___/    \_/ \___|_|    \_/ |_|\___| \_/\_/
 
+==============================================
 
-================================================================================
-
-Features of note:
+# GOAL OF THE GAME #
 
 # ACTIVE DODGING & BLOCKING #
 
@@ -105,14 +105,14 @@ keys to activate a prepared item during combat. You can only prepare a limited
 number of items, depending on the quick-use slots of your equipment. There's no
 limitation on item usage outside of combat.
 
-<p>
-                   ___                _           _
-                  / __\___  _ __ ___ | |__   __ _| |_
-                 / /  / _ \| '_ ` _ \| '_ \ / _` | __|
-                / /__| (_) | | | | | | |_) | (_| | |_
-                \____/\___/|_| |_| |_|_.__/ \__,_|\__|
+<page 3>
+=======================================
+   ___                _           _
+  / __\___  _ __ ___ | |__   __ _| |_
+ / /  / _ \| '_ ` _ \| '_ \ / _` | __|
+/ /__| (_) | | | | | | |_) | (_| | |_
+\____/\___/|_| |_| |_|_.__/ \__,_|\__|
 
+=======================================
 
-================================================================================
-
-TBA
+<page 4>
